Fixed mobile & spacing of text
Idk if mobile is any better but it works for me i guess. Yeet.
Does not work on Firefox for Android cause idk how to make a mobile version of the site if im using responsive CSS... hmm

Spaced out the text a bit so its easier to read, also fills the site up a lil more so thats cool. Thats probably all i did i think

--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@
     position: inherit; 
 }
 
+.textmargin {
+    margin-left: 7.5%;
+    margin-right: 7.5%;
+    line-height: 1.6;
+}
+
 @media only screen and (max-width: 999px) {
     .resplide {
         width: 10px;
@@ -76,7 +82,8 @@
     }
     .lowertext {
         margin: 30px;
-        margin-top: 55px
+        margin-top: 55px;
+        line-height: 1.4;
     }
     .fadeintweak img { 
         left: 10%;
@@ -101,7 +108,8 @@
     }
     .lowertext {
         padding-top: 50px;
-        margin-right: 60px;
+        margin-right: 120px;
+        line-height: 1.5;
     }
     .fadeintweak img { 
         left: 7.5%;
